tests/NormalTests/paczka2/big_fuzzy/51397307.err
Error in line 1: kU2qxiD A220 74,5
Error in line 11: DEmCeT4 A220 59,0
Error in line 33: thpxI6Q S446 64,1
Error in line 39: kU2qxiD A160 37,32
Error in line 38: thpxI6Q A220 74,0
Error in line 52: VIs9 S446 20,07
Error in line 49: DEmCeT4 A160 22,7
Error in line 53: DEmCeT4 A220 57,5
Error in line 28: sNvVGjlF36 A160 34,2
Error in line 21: VIs9 A160 72,8
Error in line 70: qHtFWGpL A220 34,5
Error in line 71: qHtFWGpL A160 72,1
Error in line 64: VIs9 S446 54,2
Error in line 99: kU2qxiD A220 2,6
Error in line 95: A160 S943 85,6
Error in line 131: DEmCeT4 S446 -3,4
Error in line 130: sNvVGjlF36 A220 80,1
Error in line 132: kU2qxiD S943 53,7
Error in line 176: DEmCeT4 A220 90,4
Error in line 171: kU2qxiD A220 51,4
Error in line 174: thpxI6Q A220 84,8
Error in line 184: thpxI6Q A160 34,7
Error in line 187: thpxI6Q S943 37,9
Error in line 190: thpxI6Q S446 35,2
Error in line 192: kU2qxiD A220 72,2
Error in line 189: A160 S446 35,4
Error in line 199: sNvVGjlF36 S943 71,8
Error in line 196: qHtFWGpL A160 40,4
Error in line 197: A160 S943 44,7
Error in line 203: kU2qxiD S943 19,8
Error in line 223: sNvVGjlF36 A160 815,6
Error in line 221: DEmCeT4 A160 75,3
Error in line 232: qHtFWGpL A220 49,0
Error in line 244: A160 A220 0,8
